# client-readiness

./: .gitignore  README.md  client-readiness.code-workspace  install.sh  run.sh
clients/py/: .gitignore  pyproject.toml  run.sh
clients/py/src/: input.py  load_feature_specs.py  main.py  validators.py
clients/py/src/features/: config_embed_wrap_package.py  config_env_variables.py  config_interface_implementations.py  config_plugin_instance.py  config_plugin_package.py  config_resolver.py  config_resolver_ext.py  config_uri_redirect.py  error_invoke.py  error_resolve_uri.py  error_subinvoke.py  invoke_plugin.py  invoke_wrap_wasm_v0_1.py  resolve_ens_contenthash.py  resolve_ens_text_record.py  resolve_file.py  resolve_http.py  resolve_instance.py  resolve_ipfs.py  resolve_package.py  resolve_redirect.py  resolve_wrapscan.py  subinvoke_plugin_wrap.py  subinvoke_wrap_plugin.py  subinvoke_wrap_wrap.py  uri.py  wrap_feature_env_vars.py  wrap_feature_interface_invoke.py  wrap_type_bigint.py  wrap_type_bignumber.py  wrap_type_bytes.py  wrap_type_enum.py  wrap_type_ints.py  wrap_type_json.py  wrap_type_map.py  wrap_type_object.py
clients/rs/: Cargo.toml  run.sh
clients/rs/src/: feature_specs.rs  input.rs  main.rs  utils.rs
clients/rs/src/features/: config_embed_wrap_package.rs  config_env_variables.rs  config_interface_implementations.rs  config_plugin_instance.rs  config_plugin_package.rs  config_resolver.rs  config_resolver_ext.rs  config_uri_redirect.rs  error_invoke.rs  error_resolve_uri.rs  error_subinvoke.rs  invoke_plugin.rs  invoke_wrap_wasm_v0_1.rs  mod.rs  resolve_ens_contenthash.rs  resolve_ens_text_record.rs  resolve_file.rs  resolve_http.rs  resolve_instance.rs  resolve_ipfs.rs  resolve_package.rs  resolve_redirect.rs  resolve_wrapscan.rs  subinvoke_plugin_wrap.rs  subinvoke_wrap_plugin.rs  subinvoke_wrap_wrap.rs  uri.rs  wrap_feature_env_vars.rs  wrap_feature_interface_invoke.rs  wrap_type_bigint.rs  wrap_type_bignumber.rs  wrap_type_bytes.rs  wrap_type_enum.rs  wrap_type_ints.rs  wrap_type_json.rs  wrap_type_map.rs  wrap_type_object.rs
feature-specs/: uri.yaml
specs/: config_embed_wrap_package.yaml  config_env_variables.yaml  config_interface_implementations.yaml  config_plugin_instance.yaml  config_plugin_package.yaml  config_resolver.yaml  config_resolver_ext.yaml  config_uri_redirect.yaml  error_invoke.yaml  error_resolve_uri.yaml  error_subinvoke.yaml  invoke_plugin.yaml  invoke_wrap_wasm_v0_1.yaml  resolve_ens_contenthash.yaml  resolve_ens_text_record.yaml  resolve_file.yaml  resolve_http.yaml  resolve_instance.yaml  resolve_ipfs.yaml  resolve_package.yaml  resolve_redirect.yaml  resolve_wrapscan.yaml  subinvoke_plugin_wrap.yaml  subinvoke_wrap_plugin.yaml  subinvoke_wrap_wrap.yaml  uri.yaml  wrap_feature_env_vars.yaml  wrap_feature_interface_invoke.yaml  wrap_test_harness_bigint_type.yaml  wrap_test_harness_bignumber_type.yaml  wrap_test_harness_env_type.yaml  (+10 more)
(+143 files in other folders)
