[tool.poetry]
name = "python-client-readiness"
description = ""
authors = []
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^5.4.1"
importlib-metadata = "^4.8.1"
polywrap-msgpack = "0.1.0a33"
polywrap-manifest = "0.1.0a33"
polywrap-core = "0.1.0a33"
polywrap-wasm = "0.1.0a33"
polywrap-plugin = "0.1.0a33"
polywrap-uri-resolvers = "0.1.0a33"
polywrap-client = "0.1.0a33"
polywrap-client-config-builder = "0.1.0a33"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10.9"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
