[tool.poetry]
name = "python-client-readiness"
description = ""
authors = []
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
importlib-metadata = "^4.8.1"
polywrap-msgpack = "0.1.0a35"
polywrap-manifest = "0.1.0a35"
polywrap-core = "0.1.0a35"
polywrap-wasm = "0.1.0a35"
polywrap-plugin = "0.1.0a35"
polywrap-uri-resolvers = "0.1.0a35"
polywrap-client = "0.1.0a35"
polywrap-client-config-builder = "0.1.0a35"
polywrap-sys-config-bundle = "^0.1.0a2"
polywrap-web3-config-bundle = "^0.1.0a2"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10.9"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
