[package]
name = "rust-client-readiness"
version = "0.1.0"
edition = "2021"

[dependencies]
polywrap_client = { git = "https://github.com/polywrap/rust-client.git", branch = "namesty/plugin-state-access" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
serde_bytes = "0.11.10"
polywrap_msgpack_serde = { path = "../../../example-format" }
polywrap_client_default_config = { git = "https://github.com/polywrap/rust-client.git", branch = "namesty/plugin-state-access" }