[package]
name = "rust-client-readiness"
version = "0.1.0"
edition = "2021"

[dependencies]
polywrap_client = { version = "0.1.6-beta.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
polywrap_client_default_config = { version = "0.1.6-beta.11" }
polywrap_resolver_extensions = { version = "0.1.6-beta.11" }